--- a/DesignerRHN/DesignerRHN-war/web/Template.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Template.xhtml
@@ -73,7 +73,7 @@
                         </tr>
                         <tr>
                             <td align="center">
-                                <p:commandButton value="Cerrar Sesión" actionListener="#{controlTemplate.cerrarSession()}" styleClass="cssBotonCerrarSesion"/>
+                                <p:commandButton value="Cerrar Sesi&oacute;n" actionListener="#{controlTemplate.cerrarSession()}" styleClass="cssBotonCerrarSesion"/>
                             </td>
                         </tr>
                     </table>
