--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -23,17 +23,17 @@
 
                                 <h:outputText id="fechas" style="position: absolute; font-size: 11px;  font-weight: bold; left: 343px; top: -27px; width: 500px; text-align: right; color: #000000; text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.7); " value="#{msg['periodoeneltiempodesde']} #{controlRemoto.fechaDesde} #{msg['hasta']} #{controlRemoto.fechaHasta} #{msg['corteal']} #{controlRemoto.fechaSistema}"/>
 
-                                <p:commandButton id="listaValores" value="" style="background-image: url(Imagenes/Iconos/lupa.png); background-size: 100% 100%; background-repeat: no-repeat; width: 30px; height: 30px; position: absolute; left: 300px; top: 100px; z-index: 1;"  process="@this" actionListener="#{controlRemoto.requerirBuscarEmpleadoTipo()}"/>
+                                <p:commandButton id="listaValores" value="" style="background-image: url(Imagenes/Iconos/lupa.png); background-size: 100% 100%; background-repeat: no-repeat; width: 30px; height: 30px; position: absolute; left: 300px; top: 103px; z-index: 1;"  process="@this" actionListener="#{controlRemoto.requerirBuscarEmpleadoTipo()}"/>
                                 <p:tooltip  for="listaValores" value="#{msg['lista']}" />
-                                <p:commandButton id="exportarXLS" value="" style="background-image: url(Imagenes/Iconos/excel.png); background-size: 100% 100%; background-repeat: no-repeat; width: 30px; height: 30px; position: absolute; left: 330px; top: 100px; z-index: 1;" actionListener="#{controlRemoto.requerirBuscarEmpleadoTipo()}"   ajax="false">
+                                <p:commandButton id="exportarXLS" value="" style="background-image: url(Imagenes/Iconos/excel.png); background-size: 100% 100%; background-repeat: no-repeat; width: 30px; height: 30px; position: absolute; left: 330px; top: 103px; z-index: 1;" actionListener="#{controlRemoto.requerirBuscarEmpleadoTipo()}"   ajax="false">
                                     <p:dataExporter type="xls"  target=":formExportar:empleadosExportar" fileName="PersonalXLS" encoding="UTF-8"/>
                                 </p:commandButton>
                                 <p:tooltip  for="exportarXLS" value="#{msg['xls']}" />
-                                <p:commandButton id="exportarXML" value="" style="background-image: url(Imagenes/Iconos/xml.png); background-size: 100% 100%; background-repeat: no-repeat; width: 30px; height: 30px; position: absolute; left: 360px; top: 100px; z-index: 1;"  actionListener="#{controlRemoto.requerirBuscarEmpleadoTipo()}" ajax="false">
+                                <p:commandButton id="exportarXML" value="" style="background-image: url(Imagenes/Iconos/xml.png); background-size: 100% 100%; background-repeat: no-repeat; width: 30px; height: 30px; position: absolute; left: 360px; top: 103px; z-index: 1;"  actionListener="#{controlRemoto.requerirBuscarEmpleadoTipo()}" ajax="false">
                                     <p:dataExporter type="xml"  target=":formExportar:empleadosExportar" fileName="PersonalXML" encoding="UTF-8"/> 
                                 </p:commandButton> 
                                 <p:tooltip  for="exportarXML" value="#{msg['xml']}" />
-                                <p:commandButton id="exportarPDF" value="" style="background-image: url(Imagenes/Iconos/pdf.png); background-size: 100% 100%; background-repeat: no-repeat; width: 30px; height: 30px; position: absolute; left: 390px; top: 100px; z-index: 1;" actionListener="#{controlRemoto.requerirBuscarEmpleadoTipo()}"  ajax="false">
+                                <p:commandButton id="exportarPDF" value="" style="background-image: url(Imagenes/Iconos/pdf.png); background-size: 100% 100%; background-repeat: no-repeat; width: 30px; height: 30px; position: absolute; left: 390px; top: 103px; z-index: 1;" actionListener="#{controlRemoto.requerirBuscarEmpleadoTipo()}"  ajax="false">
                                     <p:dataExporter type="pdf"  target=":formExportar:empleadosExportar" fileName="PersonalPDF" encoding="UTF-8"/>
                                 </p:commandButton>
                                 <p:tooltip  for="exportarPDF" value="#{msg['pdf']}" />
@@ -62,10 +62,10 @@
 
                                 <p:panel id="contenedor" style="border: none">
                                     <fieldset id="set" style="height: 92px; width: 632px; display: block; position: absolute; border-radius: 10px; left: 188px; top: 40px; padding-top: 0px; padding-bottom: 0px;">
-                                        <p:outputLabel value="#{msg['codigo']}" id="cod" style="position: relative; width: 63px; top: 4px; height: 20px; 
-                                                       color: #14388B; font-weight: bold"/>
-                                        <p:outputLabel value="#{msg['primerapellido']}" id="pa" style="position: relative; left:45px; top: 4px;
-                                                       color: #14388B; font-weight: bold"  />
+                                        <p:outputLabel value="#{msg['codigo']}" id="cod" style="position: relative; left: 2px; top: 4px; width: 63px; height: 20px; 
+                                                       color: #14388B; font-weight: bold;"/>
+                                        <p:outputLabel value="#{msg['primerapellido']}" id="pa" style="position: relative; left:49px; top: 4px;
+                                                       color: #14388B; font-weight: bold;"  />
                                         <!--<p:outputLabel value="#{msg['segundoapellido']}" id="sa" style="position: relative; 
                                                        color: #14388B; font-weight: bold" />
                                         <p:outputLabel value="#{msg['nombre']}" style="position: relative; color: #14388B; font-weight: bold"  />
@@ -82,32 +82,33 @@
                                                      style="position: relative; height: 15px; width: 143px;" onclick="select();"/>
                                         -->
                                         <!-- Panel Derecho - Superior -->
-                                        <p:commandButton id="btnPrimero" value="" styleClass="cssBotonesPaginadorPersonalizado" style="left: 440px; height: 30px; width: 30px; background-image: url(Imagenes/Iconos/rgprimero.png); background-size: 100% 100%; background-repeat: no-repeat;" disabled="#{controlRemoto.mostrarT == false ? true : false}"  actionListener="#{controlRemoto.primerTipoTrabajador()}"/>
-                                        <p:commandButton id="btnAtras" value="" styleClass="cssBotonesPaginadorPersonalizado" style="left: 470px; height: 30px; width: 30px; background-image: url(Imagenes/Iconos/rgatras.png); background-size: 100% 100%; background-repeat: no-repeat;" disabled="#{controlRemoto.mostrarT == false ? true : false}" actionListener="#{controlRemoto.atrasTipoTrabajador()}"/>
-                                        <p:commandButton id="btnSiguiente" value="" styleClass="cssBotonesPaginadorPersonalizado" style="left: 500px; height: 30px; width: 30px; background-image: url(Imagenes/Iconos/rgsiguiente.png); background-size: 100% 100%; background-repeat: no-repeat;" disabled="#{controlRemoto.mostrarT == false ? true : false}" actionListener="#{controlRemoto.siguienteTipoTrabajador()}"/>
-                                        <p:commandButton id="btnUltimo" value="" styleClass="cssBotonesPaginadorPersonalizado" style="left: 530px; height: 30px; width: 30px; background-image: url(Imagenes/Iconos/rgultimo.png); background-size: 100% 100%; background-repeat: no-repeat;" disabled="#{controlRemoto.mostrarT == false ? true : false}" actionListener="#{controlRemoto.ultimoTipoTrabajador()}"/>
+                                        <h:outputText id="informacionTT" value="#{controlRemoto.informacionTiposTrabajadores}" style="position: absolute; left: 432px; top: 7px; color: #14388B; font-weight: bold;"/>
+                                        <br/>
+                                        <p:commandButton id="btnPrimero" value="" styleClass="cssBotonesPaginadorPersonalizado" style="position: absolute; left: 430px; top:24px; height: 30px; width: 30px; background-image: url(Imagenes/Iconos/rgprimero.png); background-size: 100% 100%; background-repeat: no-repeat;" disabled="#{controlRemoto.mostrarT == false ? true : false}"  actionListener="#{controlRemoto.primerTipoTrabajador()}"/>
+                                        <p:commandButton id="btnAtras" value="" styleClass="cssBotonesPaginadorPersonalizado" style="position: absolute; left: 460px; top:24px; height: 30px; width: 30px; background-image: url(Imagenes/Iconos/rgatras.png); background-size: 100% 100%; background-repeat: no-repeat;" disabled="#{controlRemoto.mostrarT == false ? true : false}" actionListener="#{controlRemoto.atrasTipoTrabajador()}"/>
+                                        <p:commandButton id="btnSiguiente" value="" styleClass="cssBotonesPaginadorPersonalizado" style="position: absolute; left: 490px; top: 24px; height: 30px; width: 30px; background-image: url(Imagenes/Iconos/rgsiguiente.png); background-size: 100% 100%; background-repeat: no-repeat;" disabled="#{controlRemoto.mostrarT == false ? true : false}" actionListener="#{controlRemoto.siguienteTipoTrabajador()}"/>
+                                        <p:commandButton id="btnUltimo" value="" styleClass="cssBotonesPaginadorPersonalizado" style="position: absolute; left: 520px; top:24px; height: 30px; width: 30px; background-image: url(Imagenes/Iconos/rgultimo.png); background-size: 100% 100%; background-repeat: no-repeat;" disabled="#{controlRemoto.mostrarT == false ? true : false}" actionListener="#{controlRemoto.ultimoTipoTrabajador()}"/>
                                         <br/>
                                         <!-- Botones Con Imagen (3) -->
-                                        <p:commandButton id="buscarLaboral" style="position: relative; top: 10px; width: 30px; height: 30px; background-image: url(Imagenes/Iconos/buscarlaboral1.png); background-size: 100% 100%; background-repeat: no-repeat;" value="" action="busquedaAvanzada"  actionListener="#{controlBusquedaAvanzada2.recibirTipoBusqueda(0)}"  />
+                                        <p:commandButton id="buscarLaboral" style="position: absolute; left: 9px; top: 60px; width: 30px; height: 30px; background-image: url(Imagenes/Iconos/buscarlaboral1.png); background-size: 100% 100%; background-repeat: no-repeat;" value="" action="busquedaAvanzada"  actionListener="#{controlBusquedaAvanzada2.recibirTipoBusqueda(0)}"  />
                                         <p:tooltip  for="buscarLaboral" value="#{msg['badl']}"  />
-                                        <p:commandButton id="buscarPersonal" style="position: relative; top: 10px; width: 30px; height: 30px; background-image: url(Imagenes/Iconos/buscarpersonal1.png); background-size: 100% 100%; background-repeat: no-repeat;" value="" action="busquedaAvanzada"  actionListener="#{controlBusquedaAvanzada2.recibirTipoBusqueda(1)}"  />
+                                        <p:commandButton id="buscarPersonal" style="position: absolute; left: 39px; top: 60px; width: 30px; height: 30px; background-image: url(Imagenes/Iconos/buscarpersonal1.png); background-size: 100% 100%; background-repeat: no-repeat;" value="" action="busquedaAvanzada"  actionListener="#{controlBusquedaAvanzada2.recibirTipoBusqueda(1)}"  />
                                         <p:tooltip  for="buscarPersonal" value="#{msg['badp']}"  />
-                                        <p:commandButton id="busquedaRapida" style="position: relative; top: 10px; width: 30px; height: 30px; background-image: url(Imagenes/Iconos/buscarrapida1.png); background-size: 100% 100%; background-repeat: no-repeat;" value="" actionListener="#{controlRemoto.requerirBusquedaRapida()}" update=":form:lvBusquedaRapida"/>
+                                        <p:commandButton id="busquedaRapida" style="position: absolute; left: 69px; top: 60px; width: 30px; height: 30px; background-image: url(Imagenes/Iconos/buscarrapida1.png); background-size: 100% 100%; background-repeat: no-repeat;" value="" actionListener="#{controlRemoto.requerirBusquedaRapida()}" update=":form:lvBusquedaRapida"/>
                                         <p:tooltip  for="busquedaRapida" value="#{msg['br']}"  />
 
                                         
 
                                         <!-- Botones Buscar Empleado y Mostrar Todos --> 
-                                        <p:commandButton style="position: relative; left: 135px; top: 13px; width: 90px; height: 30px;"  id="BuscarEmpleado" value="#{msg['Buscar']}"
-                                                         disabled="#{controlRemoto.buscarEmp}" actionListener="#{controlRemoto.requerirBuscarEmpleadoTipo()}" update=":form:lvBuscarEmpleado"/>
+                                        <p:commandButton id="BuscarEmpleado" style="position: absolute; left: 370px; top: 60px; width: 90px; height: 30px; background-image: url(Imagenes/Iconos/buscardb.png); background-size: 100% 100%; background-repeat: no-repeat;"
+                                                         value="#{msg['Buscar']}" disabled="#{controlRemoto.buscarEmp}" actionListener="#{controlRemoto.requerirBuscarEmpleadoTipo()}" update=":form:lvBuscarEmpleado"/>
                                         <p:tooltip  for="BuscarEmpleado">
                                             #{msg['buscarunempleadoporcedula']}<br/>#{msg['nombreoapellidos']}
                                         </p:tooltip>
-                                        <p:commandButton style="position: relative; left: 135px; top: 13px; width: 90px; height: 30px;" id="MostrarTodos" value="#{msg['mostrar']}"
-                                                         actionListener="#{controlRemoto.mostrarTodos()}" update=":form:tabMenu:contenedor" disabled="#{controlRemoto.mostrarT}"/>
+                                        <p:commandButton id="MostrarTodos" style="position: absolute; left: 460px; top: 60px; width: 90px; height: 30px; background-image: url(Imagenes/Iconos/todosdb.png); background-size: 100% 100%; background-repeat: no-repeat;"
+                                                         value="#{msg['mostrar']}" actionListener="#{controlRemoto.mostrarTodos()}" update=":form:tabMenu:contenedor" disabled="#{controlRemoto.mostrarT}"/>
                                         <p:tooltip  for="MostrarTodos" value="#{msg['mostrartodos']}" />
                                         
-                                        <h:outputText id="informacionTT" value="#{controlRemoto.informacionTiposTrabajadores}" style="position: relative; left: 170px; top: 13px;"/>
                                         <p:spacer styleClass="separador" style="position: absolute; left: 552px; top: 10px; height: 70px;"/>   
                                         <!-- Boton Hoja de Vida -->
                                         <p:commandButton id="HojaDeVida" value=""  style="background-size: 100% 100%; position: absolute; background-image: url(Imagenes/Iconos/informacionPersonal.png); left: 575px; top: 2px; width: 60px; height: 60px; background-repeat: no-repeat;" disabled="#{controlRemoto.acumulado}" actionListener="#{controlEmpleadoIndividual.recibirEmpleado(controlRemoto.vwActualesTiposTrabajadoresesPosicion.empleado.secuencia)}" action="hojaVida" />
